# haven

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.bak.md  AGENTS.md  Dockerfile  Makefile  README.md  compose.yaml  local_requirements.txt  mkdocs.yml  openapi.yaml  pyproject.toml  requirements-docs.txt  requirements.txt  test_person_merging_fix.py  test_person_merging_issue.py  tmp
.beads/: haven.db  haven.db-shm  haven.db-wal  issues.jsonl  pollution-backup.jsonl
.githooks/: pre-commit  prepare-commit-msg
.github/workflows/: docs.yml
.tmp/vibe/: hostagent_package_haven_app.md
Haven/Haven/: AppState.swift  CollectorsView.swift  ContentView.swift  DashboardView.swift  HavenApp.swift  Item.swift  MenuContent.swift  Models.swift  WindowFocusHelper.swift
Haven/Haven.xcodeproj/: project.pbxproj
Haven/HavenTests/: HavenTests.swift
Haven/HavenUITests/: HavenUITests.swift  HavenUITestsLaunchTests.swift
HavenUI/: Package.swift
artifacts/documentation/: functional_guide.md  technical_reference.md
artifacts/structure/: change_plan.md  findings.md  graph.md  post_change_report.md
docs/: DOCUMENTATION_REVIEW.md  beads_backlog.md  changelog.md  contributing.md  getting-started.md  index.md
docs/api/: gateway-reference.html  gateway.md  hostagent-reference.html  hostagent.md  index.md
docs/architecture/: overview.md  services.md
docs/guides/: AGENTS.md  README.md  email-collector.md  email-fixture-generator.md  havenui.md  vcf_contacts.md
docs/hostagent/: OpenAPIServerTransport.md  collectors_run_api.md  email-gateway-submission.md  email-imap-collector.md  email-local-collector.md  email-utilities.md  hostagent-readme.md  index.md
docs/operations/: deploy.md  local-dev.md
docs/reference/: BACKUP_RESTORE.md  Envelope_Index_schema.md  SCHEMA_V2_REFERENCE.md  configuration.md  data-dictionary.md  functional_guide.md  graph.md  haven_llm.md  mail_app_cache_structure.md  relationship_features.md  technical_reference.md
documentation/: 2025-11-15_refinements.md  2025-11-15_standardize_schemas.md  BACKUP_RESTORE.md  enhanced-collector-enrichment-architecture.md  functional_guide.md  graph.md  haven-app-changes-for-new-architecture.md  hostagent-architecture-cleanup-design.md  hostagent-architecture-cleanup-implementation.md  intents-design-proposal.md  intents-implementation-remaining.md  ner-preprocessing-design-proposal.md  technical_reference.md  ui-redesign.md
documentation/hostagent/: com.haven.hostagent.plist  host_agent.md
haven-hostagent/: Package.swift
hostagent/: .gitignore  BUILD_INFO.md  Client.d  Client.swiftdeps  ENTITY_QUICKSTART.md  IMPLEMENTATION_PLAN.md  Makefile  Package.resolved  Package.swift  Package.swift.bak  QUICKSTART.md  README.md  SIGNAL_HANDLING_FIX.md  Server.d  Server.swiftdeps  Types.d  Types.swiftdeps  UNIT_3_1_TESTING.md  UNIT_3_2_SUMMARY.md
hostagent/Resources/: default-config.yaml
hostagent/Scripts/: generate-build-info.sh
notebooks/: intent_llm_playground.ipynb  postgres_query_playground.ipynb
openapi/: gateway.json  gateway.yaml  hostagent.yaml
schema/: catalog_mvp.sql  contacts.sql  init.sql
schema/migrations/: README.md  v2_001_email_collector.sql  v2_002_catalog_batch_ingest.sql  v2_003_restore_people_tables.sql  v2_004_document_people_junction.sql  v2_005_crm_relationships.sql  v2_006_contact_merge.sql  v2_007_identifier_owner.sql  v2_008_system_settings.sql  v2_009_intents_schema.sql  v2_010_macos_reminders_source_type.sql
scripts/: backfill-imessage-sender-fix.sh  backfill_image_enrichment.py  backup.sh  build-imdesc.sh  build_app_bundle.sh  caption-config.example.yaml  check_email_duplicates.py  copy_appicon.sh  create_imessage_fixtures.py  dedupe_beads.py  discover_practical_ctx.py  docs_hooks.py  export_openapi.py  find_email_by_hash.py  generate_beads_backlog.py  generate_email_external_id_report.py  generate_email_fixtures.py  list-backups.sh  precommit_run_collect_context.sh  restore.sh  serve_docs.sh  test_enhanced_ocr.py  test_entity_extraction.py  test_fswatch.py  test_ollama_conversion.py  thread_batch_processor.py
scripts/cleanup/: __init__.py  merge_contacts.py
shared/: context.py  context_utilities.py  db.py  deps.py  envelope_v2.py  haven_llm.py  image_enrichment.py  logging.py  models_v2.py  people_normalization.py  people_repository.py
src/haven/search/: app.py  (+3 more)
tests/: conftest.py  test_admin_self_person.py  test_catalog_chunking.py  test_collector_contacts.py  test_collector_imessage.py  test_collector_localfs.py  test_collector_utils.py  test_context_filtering.py  test_gateway_catalog_proxy.py  test_gateway_contacts.py  test_gateway_crm.py  test_gateway_ingest.py  test_gateway_relationships.py  test_gateway_summary.py  test_generate_beads_backlog.py  test_generate_email_fixtures.py  test_haven_llm.py  test_identifier_claiming.py  test_people_document_linking.py  test_people_merge.py  test_people_normalization.py  test_relationship_features.py  test_search_models.py
(+303 files in other folders)
