[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "haven-platform"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110,<0.116",
  "uvicorn[standard]>=0.27,<0.31",
  "httpx>=0.26,<0.28",
  "requests>=2.31,<3",
  "python-multipart>=0.0.20",
  "psycopg[binary]>=3.1",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "structlog>=23",
  "orjson>=3.9",
  "minio>=7.2",
  "pdfminer.six>=20231228",
]

[project.optional-dependencies]
common = [
  "python-json-logger",
  "tenacity",
  "typer>=0.12",
  "opentelemetry-sdk",
  "opentelemetry-instrumentation-fastapi",
]
search = [
  "qdrant-client>=1.7",
  "numpy>=1.26",
  # embeddings are now produced by an Ollama service; sentence-transformers is no longer required
]
gateway = ["authlib", "redis", "jinja2"]
catalog = ["qdrant-client>=1.8"]
contacts = [
  "phonenumberslite>=8.13",
  "idna>=3.6",
  "backoff>=2.2",
  "rich>=13.7",
]
workers = ["celery", "kombu"]

[tool.setuptools]
package-dir = {"haven" = "src/haven"}

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["haven*", "services*", "shared*", "scripts*"]

[project.scripts]
search-service = "haven.search.main:cli"
collector-run = "scripts.collectors.collector_imessage:main"
