[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "haven-platform"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110,<0.116",
  "uvicorn[standard]>=0.27,<0.31",
  "httpx>=0.26,<0.28",
  "requests>=2.31,<3",
  "python-multipart>=0.0.20",
  "psycopg[binary]>=3.1",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "structlog>=23",
  "orjson>=3.9",
  "minio>=7.2",
  "pdfminer.six>=20231228",
  "python-dateutil>=2.8",
]

[project.optional-dependencies]
common = [
  "python-json-logger",
  "tenacity",
  "typer>=0.12",
  "opentelemetry-sdk",
  "opentelemetry-instrumentation-fastapi",
]
search = [
  "qdrant-client>=1.7",
  "numpy>=1.26",
  # embeddings are now produced by an Ollama service; sentence-transformers is no longer required
]
gateway = ["authlib", "redis", "jinja2"]
catalog = ["qdrant-client>=1.8"]
contacts = [
  "phonenumberslite>=8.13",
  "idna>=3.6",
  "backoff>=2.2",
  "rich>=13.7",
]
workers = ["celery", "kombu"]
# Local development dependencies (not installed in Docker services)
# Merged from local_requirements.txt for local macOS development
dev = [
  # macOS / platform-specific
  "pyobjc-framework-Contacts",  # Required for collector_contacts.py on macOS
  # Identifier normalization (full phonenumbers, not just lite)
  "phonenumbers",  # shared.people_normalization expects this
  # Image enrichment / OCR / vision
  "Pillow>=10.0.0",  # Used by shared/image_enrichment.py
  "pillow-heif>=0.13.0",  # HEIC/HEIF support for Pillow
  # Environment / configuration
  "python-dotenv",  # Environment variable loading for local runs
  # File format helpers / parsers
  "biplist",  # Apple plist parsing (collectors may read plists)
  # Testing / development
  "pytest",
  # Notebook / interactive development
  "pandas>=2.0",  # Required for notebooks/postgres_query_playground.ipynb
  "ipython>=8.0",  # Required for notebooks/postgres_query_playground.ipynb
  "ipykernel",  # Jupyter kernel for running notebooks
  "matplotlib>=3.7",  # Required for notebooks/postgres_query_playground.ipynb (charts/visualizations)
]

[tool.setuptools]
package-dir = {"haven" = "src/haven"}

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["haven*", "services*", "shared*", "scripts*"]

[project.scripts]
search-service = "haven.search.main:cli"
collector-run = "scripts.collectors.collector_imessage:main"
